syntax = "proto3";

import "google/api/annotations.proto";
import "user/user.proto";

package com.book;

message Book {
    int64 isbn = 1;
    string title = 2;
    string author = 3;
}

message GetBookRequest {
    int64 isbn = 1;
}

message GetBookViaAuthorRequest {
    string author = 1;
}

service BookService {
    rpc GetBook (GetBookRequest) returns (Book) {}
    rpc GetBooksViaAuthor (GetBookViaAuthorRequest) returns (stream Book) {}
    rpc GetGreatestBook (stream GetBookRequest) returns (Book) {}
    rpc GetBooks (stream GetBookRequest) returns (stream Book) {}
    rpc GetBookUser (user.GetUserRequest) returns (user.User) {}
}

service BookApiService {
    rpc GetBookApi (GetBookRequest) returns (Book) {
        option (google.api.http) = {
            post: "/v1/getBook"
            body: "*"
        };
    }
    rpc GetBooksViaAuthorApi (GetBookViaAuthorRequest) returns (Book) {
        option (google.api.http) = {
            post: "/v1/getBooksViaAuthor"
            body: "*"
        };
    }
}

message BookStore {
    string name = 1;
    map<int64, string> books = 2;
}

enum EnumSample {
    option allow_alias = true;
    UNKNOWN = 0;
    STARTED = 1;
    RUNNING = 1;
}