syntax = "proto3";

package com.user;

message User {
    int64 id = 1;
    string name = 2;
}

message GetUserRequest {
    int64 id = 1;
}

service BookService {
    rpc GetUser (GetUserRequest) returns (User) {}
}